add more content and links

--- a/Electrodynamics/ac_circuit.ipynb
+++ b/Electrodynamics/ac_circuit.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "027ebd12",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e36a7a75",
    "metadata": {},
    "source": [
@@ -23,12 +31,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34c7da53",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bd3fea2",
    "metadata": {},
    "source": [
     "## Total Current\n",
     "\n",
-    "$$ \\large I = \\frac{V}{Z} $$"
+    "$$ \\large I = \\frac{V}{Z} $$\n",
+    "\n",
+    "\n",
+    "$$ \\large I_\\text{rms} = \\frac{I_\\text{max}}{\\sqrt{2}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41836372",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -38,7 +65,18 @@
    "source": [
     "## Output Voltage\n",
     "\n",
-    "$$ \\large V_{\\text{rms}} = I_{\\text{rms}} Z $$"
+    "$$ \\large \\mathcal{E} = V_\\text{max} \\sin (\\omega t) $$\n",
+    "\n",
+    "\n",
+    "$$ \\large V_{\\text{rms}} = I_{\\text{rms}} Z = \\frac{V_\\text{max}}{\\sqrt{2}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00b25ee8",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -48,17 +86,13 @@
    "source": [
     "## Power Dissipated\n",
     "\n",
+    "\n",
     "$$ \\large \\begin{split} P & = V_{\\text{rms}} \\ I_{\\text{rms}} \\cos \\phi \\\\ \n",
     "& = I^2_{\\text{rms}} Z \\cos \\phi \\\\\n",
     "& = I^2_{\\text{rms}} R\n",
-    "\\end{split}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22d94b87",
-   "metadata": {},
-   "source": [
+    "\\end{split}$$\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "- GRE Physics GR0877 Problem 070\n",
     "- GRE Physics GR1777 Problem [040](https://study-astrophysics.com/gr1777-040/)"
