--- a/Electrodynamics/poynting_vector.ipynb
+++ b/Electrodynamics/poynting_vector.ipynb
@@ -5,7 +5,15 @@
    "id": "be434df4",
    "metadata": {},
    "source": [
-    "# Poynting Vector"
+    "# [Poynting Vector](https://study-astrophysics.com/poynting-vector/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be5a391f",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,35 @@
    "id": "fb52fe34",
    "metadata": {},
    "source": [
-    "$$ \\large \\vec{S} = \\frac{1}{\\mu} \\vec{E} \\times \\vec{B} $$"
+    "## Poynting Vector\n",
+    "\n",
+    "\n",
+    "The rate of flow of energy crossing a unit area\n",
+    "\n",
+    "\n",
+    "$$ \\large \\vec{S} = \\frac{1}{\\mu_0} \\vec{E} \\times \\vec{B} $$\n",
+    "\n",
+    "\n",
+    "$$ \\large S_\\text{avg} = \\frac{E_\\text{max} B_\\text{max}}{2\\mu_0} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bb9a35b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e4c444",
+   "metadata": {},
+   "source": [
+    "## Radiation Pressure\n",
+    "\n",
+    "\n",
+    "$$ \\large P = \\frac{|S|}{c} $$"
    ]
   }
  ],
