--- a/Electrodynamics/rlc_circuit.ipynb
+++ b/Electrodynamics/rlc_circuit.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a641286",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8776372",
    "metadata": {},
    "source": [
@@ -30,12 +38,88 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee126c70",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431686bd",
+   "metadata": {},
+   "source": [
+    "## Electric Current\n",
+    "\n",
+    "\n",
+    "$$ \\large I_\\text{rms} = \\frac{V_\\text{rms}}{Z} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28ba8b46",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bde4bc0",
+   "metadata": {},
+   "source": [
+    "## Phase\n",
+    "\n",
+    "\n",
+    "$$ \\large \\tan \\phi = \\frac{X_L - X_C}{R} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ef8bc4",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f14fe49",
    "metadata": {},
    "source": [
     "## Magnetic Energy in the Inductor\n",
     "\n",
     "$$ \\large M = \\frac{1}{2} L I^2 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de4dec2",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5d558d9",
+   "metadata": {},
+   "source": [
+    "## Average Power\n",
+    "\n",
+    "\n",
+    "The average power produced by the RLC circuit is\n",
+    "\n",
+    "\n",
+    "$$ \\large P_\\text{avg} = I_\\text{rms} V_{rms} \\cos \\phi = I^2_\\text{rms} R $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b51d640d",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -58,10 +142,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f47993da",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c9fd94a",
    "metadata": {},
    "source": [
     "## High-pass Filter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26d5b470",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
