--- a/Optics/reflection.ipynb
+++ b/Optics/reflection.ipynb
@@ -5,7 +5,37 @@
    "id": "83129603",
    "metadata": {},
    "source": [
-    "# Reflection"
+    "# [Reflection](https://study-astrophysics.com/reflection/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "154d9a91",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19dcc95e",
+   "metadata": {},
+   "source": [
+    "## Law of Reflection\n",
+    "\n",
+    "\n",
+    "> Angle of Incidence = Angle of Reflection\n",
+    "\n",
+    "\n",
+    "Note that the angles are measured from the normal to the surface of reflection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c390ffd7",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -16,6 +46,14 @@
     "## Reflection Coefficient\n",
     "\n",
     "$$ \\large R = \\frac{(n_2 - n_1)^2}{(n_2 + n_1)^2} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c3221e0",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
