--- a/Optics/magnification.ipynb
+++ b/Optics/magnification.ipynb
@@ -10,21 +10,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "562ea07a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66aadb93",
+   "metadata": {},
+   "source": [
+    "## Magnification Equation\n",
+    "\n",
+    "$$ \\large M = \\frac{h_i}{h_o} = - \\frac{d_i}{d_o} $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $h_i$: image height\n",
+    "\n",
+    "\n",
+    "- $h_o$: object height\n",
+    "\n",
+    "\n",
+    "- $d_i$: image distance\n",
+    "\n",
+    "\n",
+    "- $d_o$: object distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "489ec767",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "595c5535",
    "metadata": {},
    "source": [
-    "## Telescope\n",
+    "## Example: Telescope\n",
     "\n",
     "The angular magnification of an optical telescope is\n",
     "\n",
     "\n",
     "$$ \\large M = \\frac{f_o}{f_e} $$\n",
     "\n",
+    "\n",
     "where\n",
     "\n",
-    "$f_o$: focal length of the objective lens in a refractor or of the primary mirror in a reflector\n",
     "\n",
-    "$f_e$: focal length of the eyepiece\n",
+    "- $f_o$: focal length of the objective lens in a refractor or of the primary mirror in a reflector\n",
+    "\n",
+    "\n",
+    "- $f_e$: focal length of the eyepiece\n",
     "\n",
     "\n",
     "\n",
@@ -49,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
