--- a/Optics/reflection.ipynb
+++ b/Optics/reflection.ipynb
@@ -45,6 +45,7 @@
    "source": [
     "## Reflection Coefficient\n",
     "\n",
+    "\n",
     "$$ \\large R = \\frac{(n_2 - n_1)^2}{(n_2 + n_1)^2} $$"
    ]
   },
@@ -63,7 +64,8 @@
    "source": [
     "## Transmission Coefficient\n",
     "\n",
-    "$$ \\large T = 1 - R $$"
+    "\n",
+    "$$ \\large T = 1 - R  = \\frac{4 n_1 n_2}{(n_1 - n_2)^2} $$"
    ]
   }
  ],
@@ -83,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
