--- a/Optics/lens.ipynb
+++ b/Optics/lens.ipynb
@@ -5,7 +5,7 @@
    "id": "8e5c5854",
    "metadata": {},
    "source": [
-    "# Lens"
+    "# [Lens](https://study-astrophysics.com/lens/)"
    ]
   },
   {
