--- a/Optics/mirror.ipynb
+++ b/Optics/mirror.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed8732ce",
+   "id": "2736542f",
    "metadata": {},
    "source": [
-    "# Mirror"
+    "# [Mirror](https://study-astrophysics.com/mirror/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3dec155b",
+   "id": "ccf13b9d",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a3f84b",
+   "id": "d43f5cfa",
    "metadata": {},
    "source": [
     "## Convex Mirror\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "711588b0",
+   "id": "aa179ce6",
    "metadata": {},
    "source": [
     "---"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96517f32",
+   "id": "6782dc00",
    "metadata": {},
    "source": [
     "## Concave Mirror\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a081ff",
+   "id": "5bad584d",
    "metadata": {},
    "source": [
     "---"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf4eec7",
+   "id": "34a42cf1",
    "metadata": {},
    "source": [
     "## Focal Length\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90edb93",
+   "id": "e6a5a235",
    "metadata": {},
    "source": [
     "---"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b63ce58",
+   "id": "67bcfaf6",
    "metadata": {},
    "source": [
     "## Mirror Equation\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6861b3e4",
+   "id": "2177bb7d",
    "metadata": {},
    "source": [
     "---"
