--- a/Optics/wave_equation.ipynb
+++ b/Optics/wave_equation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5f20ca2",
+   "id": "ffaba2aa",
    "metadata": {},
    "source": [
-    "# Wave Equation"
+    "# [Wave Equation](https://study-astrophysics.com/wave-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aca2d1a0",
+   "id": "9e2fdc18",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96566787",
+   "id": "18503caa",
    "metadata": {},
    "source": [
     "## Wave Equation\n",
