--- a/Optics/reflection.ipynb
+++ b/Optics/reflection.ipynb
@@ -18,6 +18,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7edc72da",
+   "metadata": {},
+   "source": [
+    "## Reflection from Fixed End (or High Density)\n",
+    "\n",
+    "- The reflected wave experiences a $\\pi \\ ( 180 ^\\circ)$ phase shift."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da399807",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cba9476",
+   "metadata": {},
+   "source": [
+    "## Reflection form Fee End (or Low Density)\n",
+    "\n",
+    "- The reflected wave experiences no phase shift."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "942867af",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19dcc95e",
    "metadata": {},
    "source": [
