--- a/Optics/polarization.ipynb
+++ b/Optics/polarization.ipynb
@@ -5,7 +5,15 @@
    "id": "0bc87fd6",
    "metadata": {},
    "source": [
-    "# Polarization"
+    "# [Polarization](https://study-astrophysics.com/polarization/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6224b16",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -22,8 +30,7 @@
     "$$ \\large I = I_0 \\cos^2 \\theta $$\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 016\n",
-    "- GRE Physics GR0877: Problem 051"
+    "- GRE Physics GR0877: Problems 016, 051"
    ]
   }
  ],
@@ -43,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
