--- a/Optics/rayleigh_criterion.ipynb
+++ b/Optics/rayleigh_criterion.ipynb
@@ -5,7 +5,15 @@
    "id": "9c8ae31d",
    "metadata": {},
    "source": [
-    "# Rayleigh Criterion"
+    "# [Rayleigh Criterion](https://study-astrophysics.com/rayleigh-criterion/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe666d2",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,22 @@
    "id": "fc7d1403",
    "metadata": {},
    "source": [
+    "## Angular Aperture (Angular Resolution)\n",
+    "\n",
+    "\n",
     "$$ \\large \\theta \\approx \\frac{1.22 \\lambda}{d} $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $\\theta$: angular aperture\n",
+    "\n",
+    "\n",
+    "- $d$: diameter of the lens\n",
+    "\n",
+    "\n",
+    "- $\\lambda$: wavelength of the light\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -37,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
