--- a/Optics/interference.ipynb
+++ b/Optics/interference.ipynb
@@ -5,7 +5,15 @@
    "id": "300641d0",
    "metadata": {},
    "source": [
-    "# Wave Interference"
+    "# [Wave Interference](https://study-astrophysics.com/wave-interference/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e221849",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -15,7 +23,14 @@
    "source": [
     "## Thin Film Interference\n",
     "\n",
+    "\n",
     "$$ \\large 2nd = m \\lambda $$\n",
+    "\n",
+    "\n",
+    "- constructive interference\n",
+    "\n",
+    "\n",
+    "- destructive interference\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -24,15 +39,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c5141f6",
+   "id": "8578f4c7",
    "metadata": {},
    "source": [
-    "## Double Slit Interference\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0892de1b",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
     "\n",
-    "$$ \\large d\\sin\\theta = m \\lambda $$\n",
     "\n",
-    "### Related Problems\n",
-    "- GRE Physics GR0177: Problem 070"
+    "### [Bragg's Law](https://study-astrophysics.com/braggs-law/)\n",
+    "\n",
+    "\n",
+    "### [Diffraction](https://study-astrophysics.com/diffraction/)"
    ]
   }
  ],
@@ -52,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
