--- a/Optics/speed_of_light.ipynb
+++ b/Optics/speed_of_light.ipynb
@@ -5,7 +5,15 @@
    "id": "24a9bf99",
    "metadata": {},
    "source": [
-    "# Speed of light"
+    "# [Speed of light](https://study-astrophysics.com/speed-of-light/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98c53795",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -16,6 +24,14 @@
     "## In Vacuum\n",
     "\n",
     "$$ \\large c $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b62b2a",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -47,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
