add contents and links

--- a/Optics/doppler_effect.ipynb
+++ b/Optics/doppler_effect.ipynb
@@ -5,7 +5,15 @@
    "id": "4afa4081",
    "metadata": {},
    "source": [
-    "# Doppler Effect"
+    "# [Doppler Effect](https://study-astrophysics.com/doppler-effect/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "846da635",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,10 +21,47 @@
    "id": "748d5e7a",
    "metadata": {},
    "source": [
-    "## When Both Moves\n",
+    "## Doppler Effect\n",
     "\n",
-    "$$ \\large f = \\frac{c+v_r}{c+v_s} f_e $$\n",
-    "\n"
+    "\n",
+    "$$ \\large f_o = \\frac{c_s+v_r}{c_s+v_s} f_e $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $f_o$: observed frequency\n",
+    "\n",
+    "\n",
+    "- $f_e$: emitted frequency\n",
+    "\n",
+    "\n",
+    "- $c_s$: speed of the sound\n",
+    "\n",
+    "\n",
+    "- $v_r$: speed of the receiver\n",
+    "\n",
+    "\n",
+    "- $v_s$: speed of the source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbaf998f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26af77a7",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Relativistic Doppler Effect](https://study-astrophysics.com/relativistic-doppler-effect/)"
    ]
   }
  ],
@@ -36,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
