--- a/Relativity/relativistic_doppler_effect.ipynb
+++ b/Relativity/relativistic_doppler_effect.ipynb
@@ -5,7 +5,15 @@
    "id": "d274432b",
    "metadata": {},
    "source": [
-    "# Relativistic Doppler Effect"
+    "# [Relativistic Doppler Effect](https://study-astrophysics.com/relativistic-doppler-effect/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc882dc",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,6 +21,9 @@
    "id": "8800112e",
    "metadata": {},
    "source": [
+    "## Relativistic Doppler Effect\n",
+    "\n",
+    "\n",
     "$$ \\large \\frac{f_s}{f_o} = \\frac{\\lambda_0}{\\lambda_s} = \\sqrt{\\frac{1+\\beta}{1-\\beta}} $$\n",
     "\n",
     "\n",
@@ -20,6 +31,25 @@
     "- GRE Physics GR1777: Problem 084\n",
     "- GRE Physics GR0877: Problem 055\n",
     "- GRE Physics GR0177: Problem 071"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54fc5e90",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f1746f",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Doppler Effect](https://study-astrophysics.com/doppler-effect/)"
    ]
   }
  ],
@@ -39,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
