add links and contents

--- a/StatisticalMechanics/carnot_cycle.ipynb
+++ b/StatisticalMechanics/carnot_cycle.ipynb
@@ -5,7 +5,34 @@
    "id": "fe941d33",
    "metadata": {},
    "source": [
-    "# Carnot Cycle"
+    "# [Carnot Cycle](https://study-astrophysics.com/carnot-cycle/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46987238",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "673aa1d2",
+   "metadata": {},
+   "source": [
+    "## Carnot Engine\n",
+    "\n",
+    "\n",
+    "The most efficient engine between any two reservoirs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abe0aef6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -15,7 +42,7 @@
    "source": [
     "## Efficiency\n",
     "\n",
-    "$$ \\large \\frac{W}{|Q|} = 1 - \\frac{T_C}{T_H} $$ \n",
+    "$$ \\large \\eta \\ = \\ \\frac{W}{Q_H} \\ = \\ 1 - \\frac{Q_C}{Q_H} \\ = \\ 1 - \\frac{T_C}{T_H} $$ \n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -39,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
