--- a/StatisticalMechanics/maxwell_boltzmann_distribution.ipynb
+++ b/StatisticalMechanics/maxwell_boltzmann_distribution.ipynb
@@ -5,7 +5,15 @@
    "id": "a4a80575",
    "metadata": {},
    "source": [
-    "# Maxwell-Boltzmann Distribution"
+    "# [Maxwell-Boltzmann Distribution](https://study-astrophysics.com/maxwell-boltzmann-distribution/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0888790",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -16,6 +24,14 @@
     "## Maxwell-Boltzmann Distribution Equation\n",
     "\n",
     "$$ \\large \\frac{N_i}{N} = \\frac{e^{-E_i/kT}}{\\sum_j e^{-E_j/kT}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79cd6fa8",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -45,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
