--- a/StatisticalMechanics/thermodynamic_processes.ipynb
+++ b/StatisticalMechanics/thermodynamic_processes.ipynb
@@ -5,7 +5,15 @@
    "id": "491ef52d",
    "metadata": {},
    "source": [
-    "# Thermodynamic Processes"
+    "# [Thermodynamic Processes](https://study-astrophysics.com/thermodynamic-processes/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13da1aff",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -34,10 +42,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3855a7e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ab5adbf",
    "metadata": {},
    "source": [
     "## Isobaric Process ($dP = 0$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7309faf6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -72,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
