--- a/StatisticalMechanics/degree_of_freedom.ipynb
+++ b/StatisticalMechanics/degree_of_freedom.ipynb
@@ -5,11 +5,10 @@
    "id": "7cda85f4",
    "metadata": {},
    "source": [
-    "# Degree of Freedom"
+    "# [Degree of Freedom](https://study-astrophysics.com/degree-of-freedom/)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1c79996b",
    "metadata": {},
@@ -48,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
