--- a/StatisticalMechanics/heat_capacities.ipynb
+++ b/StatisticalMechanics/heat_capacities.ipynb
@@ -5,7 +5,15 @@
    "id": "9a4c21cc",
    "metadata": {},
    "source": [
-    "# Heat Capacities"
+    "# [Heat Capacities](https://study-astrophysics.com/heat-capacities/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973d68c2",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,31 @@
    "id": "e577a8e8",
    "metadata": {},
    "source": [
-    "## Basic Definition"
+    "## Basic Definition\n",
+    "\n",
+    "\n",
+    "$$ \\large C \\ = \\ \\lim_{\\Delta T \\rightarrow 0} \\frac{Q}{\\Delta T} \\ = \\ \\frac{dQ}{dT} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Specific Heat\n",
+    "\n",
+    "\n",
+    "$$ \\large c = \\frac{C}{m} $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $m$: mass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13b4142b",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -29,7 +61,16 @@
     "\\end{split}\n",
     "$$\n",
     "\n",
+    "\n",
     "$$ \\large \\Rightarrow C_V = \\left( \\frac{dQ}{dT} \\right)_V = \\frac{3}{2}nR $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "531a31e4",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -37,13 +78,23 @@
    "id": "0d59ec76",
    "metadata": {},
    "source": [
-    "## Heat Capacity at Constant Pressure ($dP = 0$)\n",
+    "## Heat Capacity at Constant Pressure ($dp = 0$)\n",
     "\n",
     "$$ \\large dU = dQ - pdV $$\n",
     "\n",
+    "\n",
     "$$ \\large dQ = dU + pdV = \\frac{3}{2}nRdT + nRdT $$\n",
     "\n",
-    "$$ \\large \\Rightarrow C_P = \\left( \\frac{dQ}{dT} \\right) = \\frac{5}{2} nR $$"
+    "\n",
+    "$$ \\large \\Rightarrow C_P = \\left( \\frac{dQ}{dT} \\right)_p = \\frac{5}{2} nR $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce2f791b",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -53,7 +104,29 @@
    "source": [
     "## Relationship between $C_P$ and $C_V$\n",
     "\n",
-    "$$ \\large C_V < C_P $$\n",
+    "\n",
+    "$$ \\large C_V \\ < \\ C_P $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\gamma \\ = \\ \\frac{C_P}{C_V} $$\n",
+    "\n",
+    "\n",
+    "### For ideal Gas\n",
+    "\n",
+    "\n",
+    "$$ \\large C_P \\ = \\ C_V + nR $$\n",
+    "\n",
+    "\n",
+    "### For a Monotomic Gas\n",
+    "\n",
+    "\n",
+    "$$ \\large U \\ = \\ \\frac{3}{2} nRT $$\n",
+    "\n",
+    "\n",
+    "$$ \\large C_V \\ = \\  \\frac{3}{2}nR $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\gamma \\ = \\ \\frac{5}{3} $$\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -77,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
