--- a/StatisticalMechanics/laws_of_thermodynamics.ipynb
+++ b/StatisticalMechanics/laws_of_thermodynamics.ipynb
@@ -5,7 +5,15 @@
    "id": "65c4e4af",
    "metadata": {},
    "source": [
-    "# Laws of Thermodynamics"
+    "# [Laws of Thermodynamics](https://study-astrophysics.com/laws-of-thermodynamics/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6820eab9",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -15,7 +23,40 @@
    "source": [
     "## 1. First Law\n",
     "\n",
-    "$$ \\large dU = dQ - pdV = TdS - pdV $$"
+    "\n",
+    "$$ \\large \\Delta U \\ = \\ W + Q $$\n",
+    "\n",
+    "\n",
+    "### For a Reversible Process,\n",
+    "\n",
+    "\n",
+    "$$ \\large dU \\ = \\ dQ - PdV \\ = \\ TdS - PdV $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $dU$: change in the internal energy\n",
+    "\n",
+    "\n",
+    "- $dQ$: change in heat (added)\n",
+    "\n",
+    "\n",
+    "- $PdV = dW$: change in work (done on the system)\n",
+    "\n",
+    "\n",
+    "- $T$: temperature\n",
+    "\n",
+    "\n",
+    "- $dS$: change in entropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814e7205",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -25,9 +66,22 @@
    "source": [
     "## 2. Second Law\n",
     "\n",
+    "\n",
+    "100% efficiency is impossible.\n",
+    "\n",
+    "\n",
     "$$ \\large dS = \\frac{dQ}{T} = c m \\frac{dT}{T} \\quad (\\because dQ = cmdT) $$\n",
     "\n",
+    "\n",
     "$$ \\large \\Delta S = \\int c m \\frac{dT}{T} = c m \\ln \\left( \\frac{T_f}{T_i} \\right) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f9f6b6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -55,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
