--- a/StatisticalMechanics/clausius_clapeyron_relation.ipynb
+++ b/StatisticalMechanics/clausius_clapeyron_relation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3f8ac27",
+   "id": "32959f4c",
    "metadata": {},
    "source": [
-    "# Clausius-Clapeyron Relation"
+    "# [Clausius-Clapeyron Relation](https://study-astrophysics.com/clausius-clapeyron-relation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db6dadb8",
+   "id": "cd889a0e",
    "metadata": {},
    "source": [
     "---"
@@ -18,9 +18,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e338b2da",
+   "id": "5aac0330",
    "metadata": {},
    "source": [
+    "## Clausius-Clapeyron Relation\n",
+    "\n",
+    "\n",
     "$$ \\large \\frac {\\mathrm {d} P}{\\mathrm {d} T} \\ = \\ \\frac {PL}{T^{2}R} $$"
    ]
   }
