--- a/StatisticalMechanics/entropy.ipynb
+++ b/StatisticalMechanics/entropy.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3df9d2c",
+   "id": "c72d2b82",
    "metadata": {},
    "source": [
-    "# Entropy"
+    "# [Entropy](https://study-astrophysics.com/entropy/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6eb5d6cc",
+   "id": "03c7b796",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34c8801",
+   "id": "2b65d6db",
    "metadata": {},
    "source": [
     "## Change in Entropy\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3dff0b5",
+   "id": "6dc8cd6b",
    "metadata": {},
    "source": [
     "---"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad473999",
+   "id": "e92d159b",
    "metadata": {},
    "source": [
     "## For any Reversible Process\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424c6180",
+   "id": "e129c367",
    "metadata": {},
    "source": [
     "---"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f38eff0",
+   "id": "99cc0d8e",
    "metadata": {},
    "source": [
     "## For an Isothermal Process\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433107f1",
+   "id": "c20ca7f4",
    "metadata": {},
    "source": [
     "---"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9e1bcb",
+   "id": "f38fe6a5",
    "metadata": {},
    "source": [
     "## In General\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d54361",
+   "id": "24970eb1",
    "metadata": {},
    "source": [
     "---"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb17b954",
+   "id": "40a3207b",
    "metadata": {},
    "source": [
     "$$ \\large S \\ = \\ k_B \\ln \\Omega $$\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cdaf954",
+   "id": "317c18c8",
    "metadata": {},
    "source": [
     "---"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92021fc2",
+   "id": "49e7765a",
    "metadata": {},
    "source": [
     "## For a Thermally Isolated System\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f84d17",
+   "id": "b9c254ed",
    "metadata": {},
    "source": [
     "---"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39bb375",
+   "id": "2cdfbb15",
    "metadata": {},
    "source": [
     "## The Laws of Thermodynamics\n",
