--- a/StatisticalMechanics/ideal_gas_law.ipynb
+++ b/StatisticalMechanics/ideal_gas_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "513a70fc",
+   "id": "422e7f21",
    "metadata": {},
    "source": [
-    "# Ideal Gas Law"
+    "# [Ideal Gas Law](https://study-astrophysics.com/ideal-gas-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1e98b161",
+   "id": "12206548",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c245481",
+   "id": "6ddb5c76",
    "metadata": {},
    "source": [
     "## Ideal Gas Law\n",
