--- a/StatisticalMechanics/work(thermodynamics).ipynb
+++ b/StatisticalMechanics/work(thermodynamics).ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f2702c5",
+   "id": "e3a0a901",
    "metadata": {},
    "source": [
-    "# Work (Thermodynamics)"
+    "# [Work (Thermodynamics)](https://study-astrophysics.com/work-thermodynamics/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93ab6a35",
+   "id": "8f40b109",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d4efe45",
+   "id": "376b7123",
    "metadata": {},
    "source": [
     "## Work\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75927d3a",
+   "id": "b63f59bb",
    "metadata": {},
    "source": [
     "---"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad52e0a7",
+   "id": "d3318aae",
    "metadata": {},
    "source": [
     "## Total Work (done on a system)\n",
