--- a/StatisticalMechanics/degree_of_freedom.ipynb
+++ b/StatisticalMechanics/degree_of_freedom.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0391bc26",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c79996b",
    "metadata": {},
    "source": [
@@ -18,7 +26,7 @@
     "If the oscillator has no transitional and rotational degrees of freedom, but it has 3 vibrational degrees of freedom, then the energy is\n",
     "\n",
     "$$ \\large \\begin{split}\n",
-    "E &= \\text{(kinetic energy)} + \\text{(potential energy)}  \\\\\n",
+    "E \\ &= \\text{(kinetic energy)} + \\text{(potential energy)}  \\\\\n",
     "\\\\\n",
     "&= \\left( \\frac{1}{2}kT \\times 3 \\right) + \\left( \\frac{1}{2}kT \\times 3 \\right) \\\\\n",
     "\\\\\n",
@@ -47,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
