--- a/StatisticalMechanics/entropy.ipynb
+++ b/StatisticalMechanics/entropy.ipynb
@@ -126,6 +126,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44724083",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cff5863",
+   "metadata": {},
+   "source": [
+    "$$ \\large S \\ = \\ \\frac{\\partial}{\\partial T} (T k_B \\ln Z) $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $Z$: partition function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "317c18c8",
    "metadata": {},
    "source": [
@@ -195,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
