--- a/StatisticalMechanics/gibbs_free_energy.ipynb
+++ b/StatisticalMechanics/gibbs_free_energy.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c5bd4a2",
+   "id": "c3a0bc62",
    "metadata": {},
    "source": [
-    "# Gibbs Free Energy"
+    "# [Gibbs Free Energy](https://study-astrophysics.com/gibbs-free-energy/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2aa60974",
+   "id": "935c5d9a",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d131e08b",
+   "id": "6bea0bbb",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00addbd1",
+   "id": "b7298740",
    "metadata": {},
    "source": [
     "---"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b137e963",
+   "id": "e357f3b1",
    "metadata": {},
    "source": [
     "The Gibbs free energy is the maximum amount of non-expansion work that can be extracted from a thermodynamically closed system. This maximum can be attained only in a completely reversible process. When a system transforms reversibly from an initial state to a final state, the decrease in Gibbs free energy equals the work done by the system to its surroundings, minus the work of the pressure forces.\n",
