--- a/StatisticalMechanics/helmholtz_free_energy.ipynb
+++ b/StatisticalMechanics/helmholtz_free_energy.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "769b3fed",
+   "id": "ddd45c26",
    "metadata": {},
    "source": [
-    "# Helmholtz Free Energy"
+    "# [Helmholtz Free Energy](https://study-astrophysics.com/helmholtz-free-energy/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b4fee9c",
+   "id": "dd103fff",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb04e9e",
+   "id": "d33d0cd4",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f36210",
+   "id": "6b9a9e47",
    "metadata": {},
    "source": [
     "---"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970f71cb",
+   "id": "9aa5b38b",
    "metadata": {},
    "source": [
     "The change in the Helmholtz energy during a process is equal to the maximum amount of work that the system can perform in a thermodynamic process in which temperature is held constant. At constant temperature, the Helmholtz free energy is minimized at equilibrium."
