--- a/StatisticalMechanics/maxwells_relations.ipynb
+++ b/StatisticalMechanics/maxwells_relations.ipynb
@@ -5,7 +5,7 @@
    "id": "78edc09b",
    "metadata": {},
    "source": [
-    "# Maxwell's Relations"
+    "# [Maxwell's Relations](https://study-astrophysics.com/maxwells-relations)"
    ]
   },
   {
