--- a/StatisticalMechanics/mean_free_path.ipynb
+++ b/StatisticalMechanics/mean_free_path.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10368876",
+   "id": "dbe29051",
    "metadata": {},
    "source": [
-    "# Mean Free Path"
+    "# [Mean Free Path](https://study-astrophysics.com/mean-free-path/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8968c841",
+   "id": "900a5da0",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db63de25",
+   "id": "d1d38a2c",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000cf8bc",
+   "id": "4a9625c8",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e45c90b",
+   "id": "eb3939e9",
    "metadata": {},
    "source": [
     "## Mean Free Path of Gas Molecules\n",
