--- a/StatisticalMechanics/partition_function.ipynb
+++ b/StatisticalMechanics/partition_function.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dec7cbcc",
+   "id": "7c519778",
    "metadata": {},
    "source": [
-    "# Partition Function"
+    "# [Partition Function](https://study-astrophysics.com/partition-function/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "893b68a0",
+   "id": "1efbe949",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317062e8",
+   "id": "6023ef54",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7c4969",
+   "id": "7f3195e8",
    "metadata": {},
    "source": [
     "---"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ec8941",
+   "id": "dd5fee34",
    "metadata": {},
    "source": [
     "## Probability \n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ae2326f",
+   "id": "9f6a5e37",
    "metadata": {},
    "source": [
     "---"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99bae7e",
+   "id": "00d9b00f",
    "metadata": {},
    "source": [
     "## Pressure\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ddc9fdf",
+   "id": "d8e32583",
    "metadata": {},
    "source": [
     "---"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ff39c3",
+   "id": "d09b1b54",
    "metadata": {},
    "source": [
     "## Entropy\n",
