--- a/StatisticalMechanics/pressure.ipynb
+++ b/StatisticalMechanics/pressure.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "978d055d",
+   "id": "d8e038b0",
    "metadata": {},
    "source": [
-    "# Pressure"
+    "# [Pressure](https://study-astrophysics.com/pressure/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c6e589a",
+   "id": "5a939ccf",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74358641",
+   "id": "4f932a14",
    "metadata": {},
    "source": [
     "## Pressure of the Ideal Gas\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaed558b",
+   "id": "cd7b2af0",
    "metadata": {},
    "source": [
     "---"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0d0183",
+   "id": "1c423c75",
    "metadata": {},
    "source": [
     "## In General\n",
