--- a/StatisticalMechanics/temperature.ipynb
+++ b/StatisticalMechanics/temperature.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c15ecb6",
+   "id": "4851f59e",
    "metadata": {},
    "source": [
-    "# Temperature"
+    "# [Temperature](https://study-astrophysics.com/temperature/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e812d0c",
+   "id": "ad4da013",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e9321a",
+   "id": "dfed48b7",
    "metadata": {},
    "source": [
     "## Temperature of the Ideal Gas\n",
